test/libsolidity/syntaxTests/literalSuffixes/usableAsSuffix/invalid_this_as_suffix.sol
contract C {
    uint a = 1000 this;
}
// ----
// TypeError 5704: (26-35): This expression cannot be used as a literal suffix.
